@@ -26,14 +26,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-import static java.util.Collections.emptyList;
+import static java.util.Optional.ofNullable;
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.DRAFT_DIRECTION_ORDER_COLLECTION;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.FINAL_ORDER_COLLECTION;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_ORDER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.JUDGES_AMENDED_DIRECTION_ORDER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.LATEST_DRAFT_DIRECTION_ORDER;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.LATEST_DRAFT_HEARING_ORDER;
 
 @Service
 @Slf4j
@@ -46,48 +42,47 @@ public class HearingOrderService {
     private final OrderDateService orderDateService;
     private final UploadedDraftOrderCategoriser uploadedDraftOrderCategoriser;
 
-    public void convertToPdfAndStampAndStoreLatestDraftHearingOrder(CaseDetails caseDetails, String authorisationToken) {
-        Map<String, Object> caseData = caseDetails.getData();
+    // Mirroring logic of convertToPdfAndStampAndStoreLatestDraftHearingOrder(CaseDetails, ...) for FinremCaseData
+    public void convertToPdfAndStampAndStoreLatestDraftHearingOrder(FinremCaseData finremCaseData, String authorisationToken) {
+        Optional<DraftDirectionOrder> judgeApprovedHearingOrder = getJudgeApprovedHearingOrder(finremCaseData, authorisationToken);
 
-        Optional<DraftDirectionOrder> judgeApprovedHearingOrder = getJudgeApprovedHearingOrder(caseDetails, authorisationToken);
-
+        String caseId = finremCaseData.getCcdCaseId();
         if (judgeApprovedHearingOrder.isPresent()) {
-            String caseId = caseDetails.getId().toString();
             DraftDirectionOrder order = judgeApprovedHearingOrder.get();
             CaseDocument latestDraftDirectionOrderDocument = genericDocumentService.convertDocumentIfNotPdfAlready(
                 order.getUploadDraftDocument(),
                 authorisationToken, caseId);
             CaseDocument stampedHearingOrder = genericDocumentService.stampDocument(latestDraftDirectionOrderDocument,
-                authorisationToken, documentHelper.getStampType(caseDetails.getData()), caseId);
-            updateCaseDataForLatestDraftHearingOrder(caseData, stampedHearingOrder);
+                authorisationToken, documentHelper.getStampType(finremCaseData), caseId);
+            updateCaseDataForLatestDraftHearingOrder(finremCaseData, stampedHearingOrder);
             List<DocumentCollectionItem> additionalDocs = order.getAdditionalDocuments();
-            updateCaseDataForLatestHearingOrderCollection(caseData, stampedHearingOrder, authorisationToken, additionalDocs);
-            appendDocumentToHearingOrderCollection(caseDetails, stampedHearingOrder, additionalDocs);
+            updateCaseDataForLatestHearingOrderCollection(finremCaseData, stampedHearingOrder, authorisationToken, additionalDocs);
+            appendDocumentToHearingOrderCollection(finremCaseData, stampedHearingOrder, additionalDocs);
         } else {
             throw new InvalidCaseDataException(BAD_REQUEST.value(),
-                "Missing data from callbackRequest for Case ID: " + caseDetails.getId());
+                "Missing data from callbackRequest for Case ID: " + caseId);
         }
     }
 
-    public boolean latestDraftDirectionOrderOverridesSolicitorCollection(CaseDetails caseDetails, String authorisationToken) {
-        DraftDirectionOrder draftDirectionOrderCollectionTail = draftDirectionOrderCollectionTail(caseDetails, authorisationToken)
+    // Mirroring logic of latestDraftDirectionOrderOverridesSolicitorCollection(CaseDetails, ...) for FinremCaseData
+    public boolean latestDraftDirectionOrderOverridesSolicitorCollection(FinremCaseData finremCaeData, String authorisationToken) {
+        DraftDirectionOrder draftDirectionOrderCollectionTail = draftDirectionOrderCollectionTail(finremCaeData, authorisationToken)
             .orElseThrow(IllegalArgumentException::new);
 
-        Optional<DraftDirectionOrder> latestDraftDirectionOrder = Optional.ofNullable(caseDetails.getData().get(LATEST_DRAFT_DIRECTION_ORDER))
+        Optional<DraftDirectionOrder> latestDraftDirectionOrder = ofNullable(finremCaeData.getDraftDirectionWrapper().getLatestDraftDirectionOrder())
             .map(this::convertToDraftDirectionOrder);
 
         return latestDraftDirectionOrder.isPresent() && !latestDraftDirectionOrder.get().equals(draftDirectionOrderCollectionTail);
     }
 
-
     public void appendLatestDraftDirectionOrderToJudgesAmendedDirectionOrders(FinremCaseDetails caseDetails) {
         FinremCaseData caseData = caseDetails.getData();
 
         List<DraftDirectionOrderCollection> judgesAmendedDirectionOrders
-            = Optional.ofNullable(caseData.getDraftDirectionWrapper().getJudgesAmendedOrderCollection()).orElse(new ArrayList<>());
+            = ofNullable(caseData.getDraftDirectionWrapper().getJudgesAmendedOrderCollection()).orElse(new ArrayList<>());
 
         Optional<DraftDirectionOrder> latestDraftDirectionOrder
-            = Optional.ofNullable(caseData.getDraftDirectionWrapper().getLatestDraftDirectionOrder());
+            = ofNullable(caseData.getDraftDirectionWrapper().getLatestDraftDirectionOrder());
 
         if (latestDraftDirectionOrder.isPresent()) {
             DraftDirectionOrder draftDirectionOrder = latestDraftDirectionOrder.get();
@@ -105,12 +100,12 @@ public class HearingOrderService {
     public void appendLatestDraftDirectionOrderToJudgesAmendedDirectionOrders(CaseDetails caseDetails) {
         Map<String, Object> caseData = caseDetails.getData();
 
-        List<CollectionElement<DraftDirectionOrder>> judgesAmendedDirectionOrders = Optional.ofNullable(caseData.get(
+        List<CollectionElement<DraftDirectionOrder>> judgesAmendedDirectionOrders = ofNullable(caseData.get(
                 JUDGES_AMENDED_DIRECTION_ORDER_COLLECTION))
             .map(this::convertToListOfDraftDirectionOrder)
             .orElse(new ArrayList<>());
 
-        Optional<DraftDirectionOrder> latestDraftDirectionOrder = Optional.ofNullable(caseData.get(LATEST_DRAFT_DIRECTION_ORDER))
+        Optional<DraftDirectionOrder> latestDraftDirectionOrder = ofNullable(caseData.get(LATEST_DRAFT_DIRECTION_ORDER))
             .map(this::convertToDraftDirectionOrder);
 
         if (latestDraftDirectionOrder.isPresent()) {
@@ -121,19 +116,19 @@ public class HearingOrderService {
         }
     }
 
-    public Optional<DraftDirectionOrder> draftDirectionOrderCollectionTail(CaseDetails caseDetails, String authorisationToken) {
-        List<CollectionElement<DraftDirectionOrder>> draftDirectionOrders = Optional.ofNullable(caseDetails.getData()
-                .get(DRAFT_DIRECTION_ORDER_COLLECTION))
-            .map(this::convertToListOfDraftDirectionOrder)
-            .orElse(emptyList());
+    // Mirroring logic of draftDirectionOrderCollectionTail(CaseDetails, ...) for FinremCaseData
+    // The other uploaded orders should be processed which will be covered by DFR-3655
+    public Optional<DraftDirectionOrder> draftDirectionOrderCollectionTail(FinremCaseData finremCaseData, String authorisationToken) {
+        List<DraftDirectionOrderCollection> draftDirectionOrders
+            = finremCaseData.getDraftDirectionWrapper().getJudgeApprovedOrderCollection();
 
         Optional<DraftDirectionOrder> draftDirectionOrder = draftDirectionOrders.isEmpty()
             ? Optional.empty()
-            : Optional.of(draftDirectionOrders.get(draftDirectionOrders.size() - 1).getValue());
+            : Optional.of(draftDirectionOrders.getLast().getValue());
 
         if (draftDirectionOrder.isPresent()) {
             DraftDirectionOrder draftOrder = draftDirectionOrder.get();
-            String caseId = caseDetails.getId().toString();
+            String caseId = finremCaseData.getCcdCaseId();
             return Optional.of(DraftDirectionOrder.builder().purposeOfDocument(draftOrder.getPurposeOfDocument())
                 .uploadDraftDocument(
                     genericDocumentService.convertDocumentIfNotPdfAlready(
@@ -141,44 +136,40 @@ public class HearingOrderService {
                         authorisationToken, caseId))
                 .additionalDocuments(draftOrder.getAdditionalDocuments())
                 .build());
-
         }
         return Optional.empty();
     }
 
-    @SuppressWarnings("java:S3358")
-    private Optional<DraftDirectionOrder> getJudgeApprovedHearingOrder(CaseDetails caseDetails, String authorisationToken) {
-        Optional<DraftDirectionOrder> draftDirectionOrderCollectionTail = draftDirectionOrderCollectionTail(caseDetails, authorisationToken);
+    // Mirroring logic of getJudgeApprovedHearingOrder(CaseDetails, ...) for FinremCaseData
+    private Optional<DraftDirectionOrder> getJudgeApprovedHearingOrder(FinremCaseData finremCaseData, String authorisationToken) {
+        Optional<DraftDirectionOrder> draftDirectionOrderCollectionTail = draftDirectionOrderCollectionTail(finremCaseData, authorisationToken);
 
         return draftDirectionOrderCollectionTail.isEmpty()
             ? Optional.empty()
-            : latestDraftDirectionOrderOverridesSolicitorCollection(caseDetails, authorisationToken)
-            ? Optional.ofNullable(caseDetails.getData().get(LATEST_DRAFT_DIRECTION_ORDER)).map(this::convertToDraftDirectionOrder)
+            : latestDraftDirectionOrderOverridesSolicitorCollection(finremCaseData, authorisationToken)
+            ? ofNullable(finremCaseData.getDraftDirectionWrapper().getLatestDraftDirectionOrder()).map(this::convertToDraftDirectionOrder)
             : draftDirectionOrderCollectionTail;
     }
 
-    private void appendDocumentToHearingOrderCollection(CaseDetails caseDetails, CaseDocument document, List<DocumentCollectionItem> additionalDocs) {
-        Map<String, Object> caseData = caseDetails.getData();
-
-        List<CollectionElement<DirectionOrder>> directionOrders = Optional.ofNullable(caseData.get(HEARING_ORDER_COLLECTION))
-            .map(this::convertToListOfDirectionOrder)
-            .orElse(new ArrayList<>());
+    // Mirroring logic of appendDocumentToHearingOrderCollection(CaseDetails, ...) for FinremCaseData
+    private void appendDocumentToHearingOrderCollection(FinremCaseData finremCaseData, CaseDocument document, List<DocumentCollectionItem> additionalDocs) {
+        List<DirectionOrderCollection> directionOrders = ofNullable(finremCaseData.getUploadHearingOrder()).orElse(new ArrayList<>());
 
         DirectionOrder newDirectionOrder = DirectionOrder.builder().uploadDraftDocument(document).additionalDocuments(additionalDocs).build();
-        directionOrders.add(CollectionElement.<DirectionOrder>builder().value(newDirectionOrder).build());
+        directionOrders.add(DirectionOrderCollection.builder().value(newDirectionOrder).build());
 
-        caseData.put(HEARING_ORDER_COLLECTION, directionOrders);
+        finremCaseData.setUploadHearingOrder(directionOrders);
     }
 
-    private void updateCaseDataForLatestDraftHearingOrder(Map<String, Object> caseData, CaseDocument stampedHearingOrder) {
-        caseData.put(LATEST_DRAFT_HEARING_ORDER, stampedHearingOrder);
+    private void updateCaseDataForLatestDraftHearingOrder(FinremCaseData finremCaseData, CaseDocument stampedHearingOrder) {
+        finremCaseData.setLatestDraftHearingOrder(stampedHearingOrder);
     }
 
-    public void updateCaseDataForLatestHearingOrderCollection(Map<String, Object> caseData,
+    public void updateCaseDataForLatestHearingOrderCollection(FinremCaseData finremCaseData,
                                                               CaseDocument stampedHearingOrder,
                                                               String authorisationToken,
                                                               List<DocumentCollectionItem> additionalDocs) {
-        List<DirectionOrderCollection> finalOrderCollection = documentHelper.getFinalOrderCollection(caseData);
+        List<DirectionOrderCollection> finalOrderCollection = finremCaseData.getFinalOrderCollection();
         List<DirectionOrderCollection> finalDatedCollection = orderDateService.syncCreatedDateAndMarkDocumentStamped(finalOrderCollection, authorisationToken);
         if (!documentHelper.checkIfOrderAlreadyInFinalOrderCollection(finalDatedCollection, stampedHearingOrder)) {
             DirectionOrderCollection latestOrder = DirectionOrderCollection.builder()
@@ -191,7 +182,7 @@ public class HearingOrderService {
                 .build();
             finalDatedCollection.add(latestOrder);
         }
-        caseData.put(FINAL_ORDER_COLLECTION, finalDatedCollection);
+        finremCaseData.setFinalOrderCollection(finalDatedCollection);
     }
 
     private DraftDirectionOrder convertToDraftDirectionOrder(Object value) {
